Add secondary page that will trigger warnings

--- a/maui-issue6-xaml-datatype-warnings/AppShell.xaml
+++ b/maui-issue6-xaml-datatype-warnings/AppShell.xaml
@@ -7,13 +7,19 @@
     Shell.FlyoutBehavior="Disabled"
     Title="maui_issue6_xaml_datatype_warnings">
 
-    <ShellContent
-        Title="Main"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-    <ShellContent
-        Title="Secondary"
-        ContentTemplate="{DataTemplate local:SecondaryPage}"
-        Route="SecondaryPage" />
+    <TabBar>
+        <Tab>
+            <ShellContent
+                Title="Main"
+                ContentTemplate="{DataTemplate local:MainPage}"
+                Route="MainPage" />
+        </Tab>
+        <Tab>
+            <ShellContent
+                Title="Secondary"
+                ContentTemplate="{DataTemplate local:SecondaryPage}"
+                Route="SecondaryPage" />
+        </Tab>
+    </TabBar>
 
 </Shell>
