--- a/maui-issue6-xaml-datatype-warnings/MainPage.xaml
+++ b/maui-issue6-xaml-datatype-warnings/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="maui_issue6_xaml_datatype_warnings.MainPage">
+             xmlns:vm="clr-namespace:maui_issue6_xaml_datatype_warnings.ViewModels"
+             x:Class="maui_issue6_xaml_datatype_warnings.MainPage"
+             x:DataType="vm:PageViewModel">
 
     <ScrollView>
         <VerticalStackLayout
@@ -25,10 +27,9 @@
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
+                Text="{Binding CounterBtnText}"
                 SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Command="{Binding ClickCommand}"
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
